# linux-inotify-monitor

./: .gitignore  CMakeLists.txt  README.md  thread_test  thread_test.cpp
include/: Event.h  EventProcessor.h  InotifyWatcher.h  Journal.h  Logger.h  SignalHandler.h  ThreadSafeQueue.h
src/: EventProcessor.cpp  InotifyWatcher.cpp  Journal.cpp  Logger.cpp  SignalHandler.cpp  main.cpp
